2015/7/ParCircuit.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParCircuit
  ( happyError
  , myLexer
  , pCircuit
  , pConn
  , pGate
  , pExp
  , pListConn
  ) where

import Prelude

import qualified AbsCircuit
import LexCircuit

}

%name pCircuit Circuit
%name pConn Conn
%name pGate Gate
%name pExp Exp
%name pListConn ListConn
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '->'     { PT _ (TS _ 1) }
  'AND'    { PT _ (TS _ 2) }
  'LSHIFT' { PT _ (TS _ 3) }
  'NOT'    { PT _ (TS _ 4) }
  'OR'     { PT _ (TS _ 5) }
  'RSHIFT' { PT _ (TS _ 6) }
  L_Ident  { PT _ (TV $$)  }
  L_integ  { PT _ (TI $$)  }

%%

Ident :: { AbsCircuit.Ident }
Ident  : L_Ident { AbsCircuit.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

Circuit :: { AbsCircuit.Circuit }
Circuit : ListConn { AbsCircuit.Circuit $1 }

Conn :: { AbsCircuit.Conn }
Conn : Gate '->' Ident { AbsCircuit.Conn $1 $3 }

Gate :: { AbsCircuit.Gate }
Gate
  : Exp { AbsCircuit.PureG $1 }
  | Exp 'AND' Ident { AbsCircuit.AndG $1 $3 }
  | Ident 'OR' Ident { AbsCircuit.OrG $1 $3 }
  | Ident 'RSHIFT' Integer { AbsCircuit.RShiftG $1 $3 }
  | Ident 'LSHIFT' Integer { AbsCircuit.LShiftG $1 $3 }
  | 'NOT' Ident { AbsCircuit.NotG $2 }

Exp :: { AbsCircuit.Exp }
Exp
  : Ident { AbsCircuit.IdentExp $1 }
  | Integer { AbsCircuit.NumExp $1 }

ListConn :: { [AbsCircuit.Conn] }
ListConn
  : Conn { (:[]) $1 }
  | Conn ListConn { (:) $1 $2 }
  | {- empty -} { [] }
  | Conn ListConn { (:) $1 $2 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
