2015/7/ParCircuit.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParCircuit.y
-----------------------------------------------------------------------------

state 9 contains 1 reduce/reduce conflicts.
state 24 contains 1 reduce/reduce conflicts.

rule 17 is unused
rule 18 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pCircuit -> Circuit                         (0)
	%start_pConn -> Conn                               (1)
	%start_pGate -> Gate                               (2)
	%start_pExp -> Exp                                 (3)
	%start_pListConn -> ListConn                       (4)
	Ident -> L_Ident                                   (5)
	Integer -> L_integ                                 (6)
	Circuit -> ListConn                                (7)
	Conn -> Gate '->' Ident                            (8)
	Gate -> Exp                                        (9)
	Gate -> Exp 'AND' Ident                            (10)
	Gate -> Ident 'OR' Ident                           (11)
	Gate -> Ident 'RSHIFT' Integer                     (12)
	Gate -> Ident 'LSHIFT' Integer                     (13)
	Gate -> 'NOT' Ident                                (14)
	Exp -> Ident                                       (15)
	Exp -> Integer                                     (16)
	ListConn -> Conn                                   (17)
	ListConn -> Conn ListConn                          (18)
	ListConn ->                                        (19)
	ListConn -> Conn ListConn                          (20)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'->'           { PT _ (TS _ 1) }
	'AND'          { PT _ (TS _ 2) }
	'LSHIFT'       { PT _ (TS _ 3) }
	'NOT'          { PT _ (TS _ 4) }
	'OR'           { PT _ (TS _ 5) }
	'RSHIFT'       { PT _ (TS _ 6) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pCircuit rule  0
	%start_pConn    rule  1
	%start_pGate    rule  2
	%start_pExp     rule  3
	%start_pListConn rule  4
	Ident           rule  5
	Integer         rule  6
	Circuit         rule  7
	Conn            rule  8
	Gate            rules 9, 10, 11, 12, 13, 14
	Exp             rules 15, 16
	ListConn        rules 17, 18, 19, 20

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pCircuit -> . Circuit                        (rule 0)

	'NOT'          shift, and enter state 13
	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14
	%eof           reduce using rule 19

	Ident          goto state 7
	Integer        goto state 8
	Circuit        goto state 19
	Conn           goto state 9
	Gate           goto state 10
	Exp            goto state 11
	ListConn       goto state 20

State 1

	%start_pConn -> . Conn                              (rule 1)

	'NOT'          shift, and enter state 13
	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14

	Ident          goto state 7
	Integer        goto state 8
	Conn           goto state 18
	Gate           goto state 10
	Exp            goto state 11

State 2

	%start_pGate -> . Gate                              (rule 2)

	'NOT'          shift, and enter state 13
	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14

	Ident          goto state 7
	Integer        goto state 8
	Gate           goto state 17
	Exp            goto state 11

State 3

	%start_pExp -> . Exp                                (rule 3)

	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14

	Ident          goto state 15
	Integer        goto state 8
	Exp            goto state 16

State 4

	%start_pListConn -> . ListConn                      (rule 4)

	'NOT'          shift, and enter state 13
	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14
	%eof           reduce using rule 19

	Ident          goto state 7
	Integer        goto state 8
	Conn           goto state 9
	Gate           goto state 10
	Exp            goto state 11
	ListConn       goto state 12

State 5

	Ident -> . L_Ident                                  (rule 5)

	L_Ident        shift, and enter state 6


State 6

	Ident -> L_Ident .                                  (rule 5)

	'->'           reduce using rule 5
	'AND'          reduce using rule 5
	'LSHIFT'       reduce using rule 5
	'NOT'          reduce using rule 5
	'OR'           reduce using rule 5
	'RSHIFT'       reduce using rule 5
	L_Ident        reduce using rule 5
	L_integ        reduce using rule 5
	%eof           reduce using rule 5


State 7

	Gate -> Ident . 'OR' Ident                          (rule 11)
	Gate -> Ident . 'RSHIFT' Integer                    (rule 12)
	Gate -> Ident . 'LSHIFT' Integer                    (rule 13)
	Exp -> Ident .                                      (rule 15)

	'->'           reduce using rule 15
	'AND'          reduce using rule 15
	'LSHIFT'       shift, and enter state 25
	'OR'           shift, and enter state 26
	'RSHIFT'       shift, and enter state 27
	%eof           reduce using rule 15


State 8

	Exp -> Integer .                                    (rule 16)

	'->'           reduce using rule 16
	'AND'          reduce using rule 16
	%eof           reduce using rule 16


State 9

	ListConn -> Conn .                                  (rule 17)
	ListConn -> Conn . ListConn                         (rule 18)
	ListConn -> Conn . ListConn                         (rule 20)

	'NOT'          shift, and enter state 13
	L_Ident        shift, and enter state 6
	L_integ        shift, and enter state 14
	%eof           reduce using rule 19
			(reduce using rule 17)


	Ident          goto state 7
	Integer        goto state 8
	Conn           goto state 9
	Gate           goto state 10
	Exp            goto state 11
	ListConn       goto state 24

State 10

	Conn -> Gate . '->' Ident                           (rule 8)

	'->'           shift, and enter state 23


State 11

	Gate -> Exp .                                       (rule 9)
	Gate -> Exp . 'AND' Ident                           (rule 10)

	'->'           reduce using rule 9
	'AND'          shift, and enter state 22
	%eof           reduce using rule 9


State 12

	%start_pListConn -> ListConn .                      (rule 4)

	%eof           accept


State 13

	Gate -> 'NOT' . Ident                               (rule 14)

	L_Ident        shift, and enter state 6

	Ident          goto state 21

State 14

	Integer -> L_integ .                                (rule 6)

	'->'           reduce using rule 6
	'AND'          reduce using rule 6
	%eof           reduce using rule 6


State 15

	Exp -> Ident .                                      (rule 15)

	%eof           reduce using rule 15


State 16

	%start_pExp -> Exp .                                (rule 3)

	%eof           accept


State 17

	%start_pGate -> Gate .                              (rule 2)

	%eof           accept


State 18

	%start_pConn -> Conn .                              (rule 1)

	%eof           accept


State 19

	%start_pCircuit -> Circuit .                        (rule 0)

	%eof           accept


State 20

	Circuit -> ListConn .                               (rule 7)

	%eof           reduce using rule 7


State 21

	Gate -> 'NOT' Ident .                               (rule 14)

	'->'           reduce using rule 14
	%eof           reduce using rule 14


State 22

	Gate -> Exp 'AND' . Ident                           (rule 10)

	L_Ident        shift, and enter state 6

	Ident          goto state 32

State 23

	Conn -> Gate '->' . Ident                           (rule 8)

	L_Ident        shift, and enter state 6

	Ident          goto state 31

State 24

	ListConn -> Conn ListConn .                         (rule 18)
	ListConn -> Conn ListConn .                         (rule 20)

	%eof           reduce using rule 20
			(reduce using rule 18)



State 25

	Gate -> Ident 'LSHIFT' . Integer                    (rule 13)

	L_integ        shift, and enter state 14

	Integer        goto state 30

State 26

	Gate -> Ident 'OR' . Ident                          (rule 11)

	L_Ident        shift, and enter state 6

	Ident          goto state 29

State 27

	Gate -> Ident 'RSHIFT' . Integer                    (rule 12)

	L_integ        shift, and enter state 14

	Integer        goto state 28

State 28

	Gate -> Ident 'RSHIFT' Integer .                    (rule 12)

	'->'           reduce using rule 12
	%eof           reduce using rule 12


State 29

	Gate -> Ident 'OR' Ident .                          (rule 11)

	'->'           reduce using rule 11
	%eof           reduce using rule 11


State 30

	Gate -> Ident 'LSHIFT' Integer .                    (rule 13)

	'->'           reduce using rule 13
	%eof           reduce using rule 13


State 31

	Conn -> Gate '->' Ident .                           (rule 8)

	'NOT'          reduce using rule 8
	L_Ident        reduce using rule 8
	L_integ        reduce using rule 8
	%eof           reduce using rule 8


State 32

	Gate -> Exp 'AND' Ident .                           (rule 10)

	'->'           reduce using rule 10
	%eof           reduce using rule 10


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 21
Number of terminals: 8
Number of non-terminals: 12
Number of states: 33
